--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
 <body>
 
 <div class="container">
-    <h1>Demo MCQ Test</h1>
+    <h1>One GP One BC Mock Test</h1>
+    <h2 id="timer" style="text-align:center; color:red;"></h2>
+
+    <div style="text-align:center; margin-bottom:20px;">
+    <label><b>Student Name:</b></label><br>
+    <input type="text" id="studentName" placeholder="Enter your name" required>
+</div>
+
+
     <form id="quizForm">
         <div id="quiz"></div>
 
