--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 
 <div class="container">
     <h1>One GP One BC Mock Test</h1>
-    <h2 id="timer" style="text-align:center; color:red;"></h2>
+    <h2 id="timer" style="text-align:center; color:red;">
+        <span id="timer"></span>
+    </h2>
 
     <div style="text-align:center; margin-bottom:20px;">
     <label><b>Student Name:</b></label><br>
@@ -29,3 +31,4 @@
 <script src="script.js"></script>
 </body>
 </html>
+
