--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 
 <div class="container">
     <h1>One GP One BC Mock Test</h1>
-    <h2 id="timer" style="text-align:center; color:red;">
-        <span id="timer"></span>
-    </h2>
+    <div id="timer-box">
+    <span id="timer">Time Left: 50:00</span>
+</div>
+
 
     <div style="text-align:center; margin-bottom:20px;">
     <label><b>Student Name:</b></label><br>
@@ -31,4 +32,5 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
