--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 
 
     <form id="quizForm">
-        <div id="quiz"></div>
+        <div id="questionsContainer"></div>
+
 
         <button type="submit">Submit Test</button>
     </form>
@@ -32,5 +33,6 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
