--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 
     <form id="quizForm">
-        <div id="questionsContainer"></div>
+        <div id="quiz"></div>
 
 
         <button type="submit">Submit Test</button>
@@ -33,6 +33,7 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
