--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
     <title>Demo MCQ Test</title>
     <link rel="stylesheet" href="style.css">
 </head>
+  
+    <!-- Result Popup -->
+<div id="resultPopup" class="popup hidden">
+  <span class="close-btn" id="closePopup">&times;</span>
+  <h3>Test Submitted</h3>
+  <p><b>Name:</b> <span id="pName"></span></p>
+  <p><b>Percentage:</b> <span id="pPercent"></span>%</p>
+  <p><b>Result:</b> <span id="pResult"></span></p>
+</div>
+
 <body>
 
 <div class="container">
@@ -33,6 +43,7 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
