--- a/index.html
+++ b/index.html
@@ -1,50 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Demo MCQ Test</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <title>One GP One BC Mock Test</title>
+  <link rel="stylesheet" href="style.css">
 </head>
-  
-    <!-- Result Popup -->
-<div id="resultPopup" class="popup hidden">
-  <span class="close-btn" id="closePopup">&times;</span>
-  <h3>Test Submitted</h3>
-  <p><b>Name:</b> <span id="pName"></span></p>
-  <p><b>Percentage:</b> <span id="pPercent"></span>%</p>
-  <p><b>Result:</b> <span id="pResult"></span></p>
-</div>
 
 <body>
 
-<div class="container">
-    <h1>One GP One BC Mock Test</h1>
-    <div id="timer-box">
-    <span id="timer">Time Left: 50:00</span>
+<!-- ================= RESULT POPUP ================= -->
+<div id="resultPopup" class="popup hidden">
+  <div class="popup-box">
+    <span class="close-btn" id="closePopup">&times;</span>
+    <h3>Test Submitted</h3>
+    <p><b>Name:</b> <span id="pName"></span></p>
+    <p><b>Percentage:</b> <span id="pPercent"></span>%</p>
+    <p><b>Result:</b> <span id="pResult"></span></p>
+  </div>
 </div>
+<!-- ================================================= -->
 
+<div class="container">
+  <h1>One GP One BC Mock Test</h1>
 
-    <div style="text-align:center; margin-bottom:20px;">
+  <div id="timer-box">
+    <span id="timer">Time Left: 50:00</span>
+  </div>
+
+  <div style="text-align:center; margin-bottom:20px;">
     <label><b>Student Name:</b></label><br>
     <input type="text" id="studentName" placeholder="Enter your name" required>
-</div>
+  </div>
 
+  <form id="quizForm">
+    <div id="quiz"></div>
+    <button type="submit">Submit Test</button>
+  </form>
 
-    <form id="quizForm">
-        <div id="quiz"></div>
-
-
-        <button type="submit">Submit Test</button>
-    </form>
-
-    <div id="result"></div>
+  <!-- Bottom result (keep this) -->
+  <div id="result"></div>
 </div>
 
 <script src="script.js"></script>
 </body>
 </html>
-
-
-
-
-
