--- a/index.html
+++ b/index.html
@@ -7,28 +7,42 @@
 </head>
 
 <body>
-<div class="container">
-  <h1>One GP One BC Mock Test</h1>
 
-  <div id="timer-box">
-    <span id="timer">Time Left: 50:00</span>
+  <div class="container">
+    <h1>One GP One BC Mock Test</h1>
+
+    <!-- TIMER -->
+    <div id="timer-box">
+      <span id="timer">Time Left: 50:00</span>
+    </div>
+
+    <!-- STUDENT NAME -->
+    <div style="text-align:center; margin-bottom:20px;">
+      <label><b>Student Name:</b></label><br>
+      <input
+        type="text"
+        id="studentName"
+        placeholder="Enter your name"
+        required
+      >
+    </div>
+
+    <!-- QUIZ FORM -->
+    <form id="quizForm">
+      <div id="quiz"></div>
+
+      <div style="text-align:center; margin-top:20px;">
+        <button type="submit">Submit Test</button>
+      </div>
+    </form>
+
+    <!-- RESULT (BOTTOM, KEEP THIS) -->
+    <div id="result"></div>
   </div>
 
-  <div style="text-align:center; margin-bottom:20px;">
-    <label><b>Student Name:</b></label><br>
-    <input type="text" id="studentName" placeholder="Enter your name" required>
-  </div>
+  <!-- IMPORTANT: ORDER MATTERS -->
+  <script src="questions.js"></script>
+  <script src="script.js"></script>
 
-  <form id="quizForm">
-    <div id="quiz"></div>
-    <button type="submit">Submit Test</button>
-  </form>
-
-  <!-- Bottom result (keep this) -->
-  <div id="result"></div>
-</div>
-
-<script src="script.js"></script>
 </body>
 </html>
-
