--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>One GP One BC Mock Test</title>
+  <title>EDP MCQ Examination</title>
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -49,3 +49,4 @@
 
 </body>
 </html>
+
